# pythonweb-06

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 17efb667c9b6_create_initial_tables.py
src/: my_select.py  seed.py
src/db/: session.py
src/db/models/: __init__.py  base.py  grade_model.py  group_model.py  student_model.py  subject_model.py  teacher_model.py
